<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.DigitalNXController.AppBarOverlay">

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

    </RelativeLayout>

    <include layout="@layout/content_login" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="200dp"
        app:layout_anchor="@+id/relativeLayout"
        app:layout_anchorGravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="28dp"
            android:src="@drawable/logo_with_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="@string/login_activity_form_text"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:gravity="center" />

        <EditText
            android:id="@+id/login_form_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/login_activity_backend_address_field"
            android:textColor="@color/black"
            android:inputType="text" />

        <EditText
            android:id="@+id/login_form_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/login_activity_username_field"
            android:textColor="@color/black"
            android:inputType="text" />

        <EditText
            android:id="@+id/login_form_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/login_activity_password_field"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/login_activity_login_button" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>