<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".ui.settings.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="22dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:layout_marginBottom="3dp"
                android:text="Software Info"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/android_app_version"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:text="@string/android_app_version_string"/>
            <TextView
                android:id="@+id/backend_version"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:text="@string/backend_version_string"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="3dp"
                android:text="Login Info"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/logged_in_as"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:text="@string/logged_in_as_string"/>

            <Button
                android:id="@+id/logout_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Logout"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>